feat: google api

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
 <body>
   <app-root></app-root>
 
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDguYteVeMwIPgxcrKQF-jR9Gl6MqDJqc&amp;libraries=places,geometry"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_API_KEY}}&amp;libraries=places,geometry"></script>
 
   <!-- Facebook -->
   <script>
