fix: remove Fb js if Cordova

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,8 @@
 
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_API_KEY}}&amp;libraries=places,geometry"></script>
 
+  <!--removeIf(cordova)-->
+
   <!-- Facebook -->
   <script>
       // Load the SDK asynchronously
@@ -62,6 +64,8 @@
           fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
   </script>
+
+  <!--endRemoveIf(cordova)-->
 
   <script async src="webphotofilter.js"></script>
   <script async src="websocialshare.js"></script>
